# video-editor

./: .editorconfig  Cargo.toml  README.md  index.html  sw.js  video_editor-22570a5bfccc8164.js  video_editor-3eb4ddaa112e4eca.js  video_editor-3eb4ddaa112e4eca_bg.wasm  video_editor-9d779cd0d85a86d0.js  video_editor-9d779cd0d85a86d0_bg.wasm
.github/workflows/: pages.yml  rust.yml
src/: app.rs  footer.rs  lib.rs  main.rs  menu_bar.rs  panes.rs  tiles.rs
src/panes/: files.rs  mod.rs  timeline.rs  video.rs
src/panes/files/: filters.rs  handle_file.rs  mod.rs
